--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="nav-links">
                 <a href="#pricing">Bảng Giá</a>
-                <a href="#login" class="login-btn">Đăng Nhập</a>
-                <a href="#get-started" class="cta-btn">Bắt Đầu Ngay</a>
+                <a href="http://m.me/booboocomic" class="login-btn" target="_blank">Tạo thử trang bìa miễn phí</a>
+                <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Bắt Đầu Ngay</a>
             </div>
         </nav>
     </header>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="cta-buttons">
-                        <a href="#" class="button primary">Tạo sách của bé</a>
+                        <a href="http://m.me/booboocomic" class="button primary" target="_blank">Tạo sách của bé</a>
                         <span class="price">Từ 49.000đ</span>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                 <div class="text-content">
                     <h2>Hình ảnh nhân vật được tạo từ hình ảnh của bé</h2>
                     <p>Công nghệ AI biến ảnh bé thành nhân vật chính sinh động trong truyện, từ trang phục đến bối cảnh đều được tùy chỉnh theo ý thích!</p>
-                    <button class="cta-btn">Tạo sách của bé</button>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Tạo thử trang bìa miễn phí</a>
                 </div>
                 <div class="image-content">
                     <div class="main-illustration">
@@ -122,7 +122,7 @@
                 <div class="text-content">
                     <h2>Câu chuyện được tạo riêng cho bé</h2>
                     <p>Chọn những bài học, địa điểm và chủ đề phù hợp với gia đình bạn, tạo nên một câu chuyện thực sự có ý nghĩa với bé.</p>
-                    <button class="cta-btn">Tạo sách của bé</button>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Tạo thử trang bìa miễn phí</a>
                 </div>
             </div>
         </section>
@@ -131,8 +131,8 @@
             <div class="gift-treasure-content">
                 <div class="text-content">
                     <h2>Món quà ý nghĩa</h2>
-                    <p>Tặng cho bé một cuốn sách đẹp, mang lại niềm vui và gắn kết gia đình. Hoàn hảo cho những giờ đọc truyện trước khi đi ngủ.</p>
-                    <button class="cta-btn">Tạo sách ngay</button>
+                    <p>Tặng cho beb một cuốn sách đẹp, mang lại niềm vui và gắn kết gia đình. Hoàn hảo cho những giờ đọc truyện trước khi đi ngủ.</p>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Tạo thử trang bìa miễn phí</a>
                 </div>
                 <div class="image-content">
                     <div class="book-showcase">
@@ -177,7 +177,7 @@
                         <li>Bản kỹ thuật số (PDF)</li>
                         <li>Xem được trên mọi thiết bị</li>
                     </ul>
-                    <button class="cta-btn">Chọn Gói</button>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Chọn Gói</a>
                 </div>
 
                 <div class="pricing-card">
@@ -189,7 +189,7 @@
                         <li>Bìa cứng cao cấp</li>
                         <li>Miễn phí vận chuyển</li>
                     </ul>
-                    <button class="cta-btn">Chọn Gói</button>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Chọn Gói</a>
                 </div>
 
                 <div class="pricing-card featured">
@@ -203,7 +203,7 @@
                         <li>Tặng kèm bookmark</li>
                         <li>Miễn phí vận chuyển</li>
                     </ul>
-                    <button class="cta-btn">Chọn Gói</button>
+                    <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Chọn Gói</a>
                 </div>
             </div>
         </section>
@@ -217,7 +217,7 @@
                     <div class="cta-text">
                         <h2>Câu chuyện nào bạn sẽ tạo hôm nay?</h2>
                         <p>Bắt đầu tạo cuốn sách cá nhân hoá chỉ trong vài phút</p>
-                        <a href="#get-started" class="cta-btn">Tạo sách của bé</a>
+                        <a href="http://m.me/booboocomic" class="cta-btn" target="_blank">Tạo sách của bé</a>
                         <p class="price-text">Từ 49.000đ</p>
                     </div>
                 </div>
